Added Bootstrap to fix responsiveness

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gradient Background Generator</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body id="gradient">
-  <div class="content">
-    <h1>Background Generator</h1>
-    <input class="color1" type="color" name="color1" value="#FF6AD5">
-    <input class="color2" type="color" name="color2" value="#8795E8">
-    <h2>Current CSS Background</h2>
-    <h3></h3>
-  </div>
+  <h1>Background Generator</h1>
+  <input class="color1" type="color" name="color1" value="#FF6AD5">
+  <input class="color2" type="color" name="color2" value="#8795E8">
+  <h2>Current CSS Background</h2>
+  <h3></h3>
   <script src="assets/js/script.js"></script>
 </body>
 </html>
